# 3D-PRINTER-AUTOMATION

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  compose.yaml
.agents/skills/delegate-sonnet/: SKILL.md
.agents/skills/delegate-sonnet/agents/: openai.yaml
.claude/: settings.json
.claude/agents/: project-explorer.md  project-worker.md
apps/web/: README.md  next.config.ts  package-lock.json  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/account/: page.tsx
apps/web/src/app/forgot-password/: page.tsx
apps/web/src/app/get-a-quote/: page.tsx
apps/web/src/app/reset-password/: page.tsx
apps/web/src/app/sign-in/: page.tsx
apps/web/src/app/sign-up/: page.tsx
apps/web/src/app/verify-email/: page.tsx
apps/web/src/components/auth/: account-panel.tsx  auth-form.module.css  auth-shell.tsx  forgot-password-form.tsx  owner-mfa-panel.tsx  reset-password-form.tsx  sign-in-form.tsx  sign-up-form.tsx  verify-email-panel.tsx
apps/web/src/components/quotes/: quote-request-panel.tsx  quote-request.module.css
apps/web/src/lib/: auth-api.test.ts  auth-api.ts  quote-api.test.ts  quote-api.ts
docs/: ARCHITECTURE.md  PRODUCT_REQUIREMENTS.md  ROADMAP.md  SECURITY.md
docs/adr/: 0001-authentication.md  0002-identity-http-adapters.md  0003-owner-identity-security.md  0004-private-model-upload-intake.md  0005-isolated-analysis-orchestration.md
infra/: compose.yaml
infra/minio/: cors.json
services/api/: .env.example  alembic.ini  pyproject.toml
services/api/migrations/: env.py
services/api/migrations/versions/: 0001_identity_foundation.py  0002_owner_identity_security.py  0003_quote_upload_intake.py  0004_analysis_orchestration.py
services/api/src/xxx_api/: __init__.py  cli.py  config.py  database.py  dependencies.py  email.py  http.py  logging.py  main.py  rate_limit.py  storage.py
services/api/src/xxx_api/domain/: __init__.py  auth.py  quotes.py  roles.py
services/api/src/xxx_api/models/: __init__.py  analysis.py  base.py  identity.py  quotes.py
services/api/src/xxx_api/routes/: auth.py  health.py  quotes.py
services/api/src/xxx_api/schemas/: __init__.py  auth.py  quotes.py
services/api/src/xxx_api/security/: __init__.py  cookies.py  email.py  mfa.py  passwords.py  tokens.py
services/api/src/xxx_api/services/: __init__.py  analysis.py  audit.py  auth.py  owner_security.py  quotes.py
services/api/tests/: test_analysis_service.py  test_auth_http.py  test_auth_service.py  test_cli.py  test_config.py  test_cookies.py  test_email.py  test_email_delivery.py  test_health.py  test_logging.py  test_mfa.py  test_models.py  test_owner_auth_http.py  test_owner_security.py  test_passwords.py  test_quotes_http.py  test_quotes_service.py  test_rate_limit.py  test_storage.py  test_tokens.py
services/worker/: pyproject.toml
services/worker/src/xxx_worker/: __init__.py  cli.py  main.py  orchestrator.py  queue.py  sandbox.py  validation.py
services/worker/tests/: test_orchestrator.py  test_queue.py  test_sandbox.py  test_validation.py
