[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "xxx-api"
version = "0.1.0"
description = "API for the xxx 3D-printing ordering and operations platform"
requires-python = ">=3.13"
dependencies = [
  "aiosqlite>=0.21,<1",
  "alembic>=1.18,<2",
  "boto3>=1.42,<2",
  "email-validator>=2.2,<3",
  "cryptography>=44,<50",
  "fastapi>=0.115,<1",
  "psycopg[binary,pool]>=3.2,<4",
  "pwdlib[argon2]>=0.3,<1",
  "pyjwt[crypto]>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "pyotp>=2.9,<3",
  "redis>=8,<9",
  "sqlalchemy[asyncio]>=2.0.51,<2.1",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "boto3-stubs[s3]>=1.42,<2",
  "httpx2>=2,<3",
  "mypy>=1.15,<2",
  "pytest>=8.3,<9",
  "ruff>=0.9,<1",
]

[project.scripts]
xxx-api = "xxx_api.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/xxx_api"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
