[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "xxx-worker"
version = "0.1.0"
description = "Isolated model validation and slicing worker for xxx"
requires-python = ">=3.13"
dependencies = [
  "defusedxml>=0.7,<1",
  "redis>=8,<9",
  "xxx-api==0.1.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.15,<2",
  "pytest>=8.3,<9",
  "ruff>=0.9,<1",
  "types-defusedxml>=0.7,<1",
]

[project.scripts]
xxx-analyzer = "xxx_worker.cli:main"
xxx-worker = "xxx_worker.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/xxx_worker"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.13"
strict = true
